# SensorToolKit-STK

./: .gitmodules  CITATION.cff  LICENSE  README.md
Firmware/: CMakeLists.txt  README.md
Firmware/Arduino/: README.md  main.ino
Firmware/Arduino/Applications/Amperometry/: Amperometric.c
Firmware/Arduino/main/: ARDUINOPort.cpp
Firmware/ESP-IDF/: README.md
Firmware/ESP-IDF/components/ESP32/: CMakeLists.txt  ESP32Port.c  esp32.h
Firmware/ESP-IDF/components/ad5940lib/: CMakeLists.txt
Firmware/ESP-IDF/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Firmware/ESP-IDF/main/Applications/Amperometry/: AD5940_AMPmain.c  Amperometric.c  Amperometric.h
Firmware/ESP-IDF/main/Applications/Open Circuit Potentiometry/: AD5940_ADCSeqMUX.c  AD5940_ADCSeqMUX_MQTT.c  AD5940_OCP-ADCPolling.c  AD5940_OCP-ADCPolling_MQTT.c  ADCSequencer.h
Firmware/components/ESP32/: CMakeLists.txt  ESP32Port.c  esp32.c  esp32.h
Firmware/main/: main.c
Firmware/main/Applications/Amperometry/: AD5940_AMPmain.c
Server Side/: README.md  docker-compose.yaml
Server Side/Grafana/Dashboards/: OCP.json
Server Side/Node-RED/: STKtest_Node-RED_flows.json
betas/applications/: AD5940_ADCSeq.c  AD5940_ADCSeqMUX_vAlfa-debug.c  AD5940_ADCSeqMUX_vBeta.c
betas/components/ESP32/: CMakeLists.txt  ESP32Port.c  esp32.c  esp32.c.bad  esp32.c.old  esp32.h  esp32.h.bad  esp32.h.old  esp32_mqtt5.c  esp32_mqtt5.h  esp32_wifi.c  esp32_wifi.h  esp_mqtt5.c  esp_wifi.c
fails/: AD5940_ADCMultiplexer(SEQgen_Stalled-noINTs).c  AD5940_ADCMultiplexerTEST(noSEQgen-PanicError_mem).c  spi_AD5941_main.c
(+8 files in other folders)
